--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<li><a href="#intro">Principal</a></li>
 							<li><a href="#one">Nossos projetos</a></li>
 							<li><a href="#two">O que fazemos</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#three">Entre em contato</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -48,7 +48,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://fabdev.shinyapps.io/Ressignifica_RTN/" class="image"><img src="images/RTN.jpg" alt="" data-position="center center" /></a>
+							<a href="https://fabdev.shinyapps.io/Ressignifica_RTN/" class="image"><img src="images/RTN.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ressignificando o Resultado do Tesouro Nacional</h2>
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="municipios.html" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="municipios.html" class="image"><img src="images/EeM.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Dependência dos municípios brasileiros de transferências financeiras</h2>
@@ -76,7 +76,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Quem somos</h2>
+							<h2>O que fazemos</h2>
 							<p>O GT-CEAD da STN foi instituído pela Portaria 855, de 2017, tendo como missão:</p>
 							<div class="features">
 								<section>
@@ -109,8 +109,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Entre em contato</h2>
-							<p>Formas de contato:</p>
+							<h2>Entre em contato:</h2>
 							<div class="split style1">
 								<section>
 									<ul class="contact">
