correção de extensões de arquivos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://fabdev.shinyapps.io/Ressignifica_RTN/" class="image"><img src="images/RTN.png" alt="" data-position="center center" /></a>
+							<a href="https://fabdev.shinyapps.io/Ressignifica_RTN/" class="image"><img src="images/RTN.PNG" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ressignificando o Resultado do Tesouro Nacional</h2>
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="municipios.html" class="image"><img src="images/EeM.png" alt="" data-position="top center" /></a>
+							<a href="municipios.html" class="image"><img src="images/EeM.PNG" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Dependência dos municípios brasileiros de transferências financeiras</h2>
