--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://fabdev.shinyapps.io/Ressignifica_RTN/" class="image"><img src="images/RTN.PNG" alt="" data-position="center center" /></a>
+							<a href="https://fabdev.shinyapps.io/Ressignifica_RTN/" class="image" target="_blank"><img src="images/RTN.PNG" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ressignificando o Resultado do Tesouro Nacional</h2>
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="municipios.html" class="image"><img src="images/EeM.PNG" alt="" data-position="top center" /></a>
+							<a href="municipios.html" class="image" target="_blank"><img src="images/EeM.PNG" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Dependência dos municípios brasileiros de transferências financeiras</h2>
@@ -80,7 +80,7 @@
 							<p>O GT-CEAD da STN foi instituído pela Portaria 855, de 2017, tendo como missão:</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
+									<span class="icon major fa-chart-bar"></span>
 									<h3>Comunicação e análise</h3>
 									<p>Desenvolver atividades de comunicação estratégica institucional e de análise de dados avançada.</p>
 								</section>
