--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<p>O GT-CEAD da STN foi instituído pela Portaria 855, de 2017, tendo como missão:</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-chart-bar"></span>
+									<span class="icon major fa-code"></span>
 									<h3>Comunicação e análise</h3>
 									<p>Desenvolver atividades de comunicação estratégica institucional e de análise de dados avançada.</p>
 								</section>
