correção de links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<h2>Ressignificando o Resultado do Tesouro Nacional</h2>
 									<p>Um aplicativo com o objetivo de fornecer informações para melhor compreensão dos fluxos de entrada e saída de recursos e trazer alugmas primeiras análises mais avançadas para fomentar o debate, a participação social e o controle social sobre as finanças públicas do governo central brasileiro.</p>
 									<ul class="actions">
-										<li><a href="https://fabdev.shinyapps.io/Ressignifica_RTN/" class="button">Conheça</a></li>
+										<li><a href="https://fabdev.shinyapps.io/Ressignifica_RTN/" class="button" target="_blank">Conheça</a></li>
 									</ul>
 								</div>
 							</div>
@@ -66,7 +66,7 @@
 									<h2>Dependência dos municípios brasileiros de transferências financeiras</h2>
 									<p>Uma análise exploratória do perfil dos municípios brasileiros e de sua dependência de recursos dos estados e da União.</p>
 									<ul class="actions">
-										<li><a href="municipios.html" class="button">Conheça</a></li>
+										<li><a href="municipios.html" class="button" target="_blank">Conheça</a></li>
 									</ul>
 								</div>
 							</div>
