remoção de botão "Learn More"

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 									<p>Promovento maior disponbilidade de informações em temas para os quais a sociedade não encontra facilmente fontes para análises de forma objetiva.</p>
 								</section>
 							</div>
-							<ul class="actions">
+							<!--<ul class="actions">
 								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
+							</ul>-->
 						</div>
 					</section>
 
