--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="inner">
 							<h1>GT-CEAD</h1>
 							<p>Grupo Técnico de Comunicação Estratégica e Análise de Dados Avançada<br />
-							da Secretaria do Tesouro Nacional.</p>
+							da Secretaria do Tesouro Nacional</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Saiba mais</a></li>
 							</ul>
