--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					</section>
 
 					<section>
-						<a href="https://youtu.be/Xjs5oKTp3cc" class="image" target="_blank"><img src="images/Tchiluanda.png" alt="" data-position="top center" /></a>
+						<a href="https://youtu.be/Xjs5oKTp3cc" class="image" target="_blank"><img src="images/p1.png" alt="" data-position="top center" /></a>
 						<div class="content">
 							<div class="inner">
 								<h2>Descubra o Resultado do Tesouro Nacional - RTN</h2>
