--- a/index.html
+++ b/index.html
@@ -6,140 +6,83 @@
 -->
 <html>
 	<head>
-		<title>GT-CEAD da STN</title>
+		<title>GT-CEAD da STN - Temporário</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link rel="stylesheet" href="assets/css/eleicoes.css" />
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+		<style>
+			@import url(font-awesome.min.css);
+			* {
+				font-family: 'Source Sans Pro', sans-serif;
+			}
+
+			section {
+				margin: 1%;
+			}
+
+			ul {
+				list-style: disc;
+				margin: 0 0 2em 0;
+				padding-left: 1em;
+			}
+
+				ul li {
+					padding-left: 0.5em;
+				}
+
+				ul.alt {
+					list-style: none;
+					padding-left: 0;
+				}
+
+					ul.alt li {
+						border-top: solid 1px rgba(255, 255, 255, 0.15);
+						padding: 0.5em 0;
+					}
+
+						ul.alt li:first-child {
+							border-top: 0;
+							padding-top: 0;
+						}
+
+				ul.icons {
+					cursor: default;
+					list-style: none;
+					padding-left: 0;
+				}
+
+					ul.icons li {
+						display: inline-block;
+						padding: 0 0.75em 0 0;
+					}
+
+						ul.icons li:last-child {
+							padding-right: 0;
+						}
+
+				ul.contact {
+					list-style: none;
+					padding: 0;
+				}
+
+					ul.contact > li {
+						padding: 0;
+						margin: 1.5em 0 0 0;
+					}
+
+						ul.contact > li:first-child {
+							margin-top: 0;
+						}
+		</style>
 	</head>
 	<body>
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Principal</a></li>
-							<li><a href="#one">Nossos projetos</a></li>
-							<li><a href="#two">O que fazemos</a></li>
-							<li><a href="#three">Entre em contato</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>
+	<img src="ill_be_back.png" alt="O site foi temporariamente retirado do ar para atender à Instrução Normativa nº 1, da Secretaria Especial de Comunicação Social (SECOM), de 11 de abril de 2018. Voltaremos após as eleições!"/>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>GT-CEAD</h1>
-							<p>Grupo Técnico de Comunicação Estratégica e Análise de Dados Avançada<br />
-							da Secretaria do Tesouro Nacional</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Saiba mais</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-
-						<section>
-							<a href="https://fabdev.shinyapps.io/Analise_RTN/" class="image" target="_blank"><img src="images/RTN.PNG" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ressignificando o Resultado do Tesouro Nacional</h2>
-									<p>Um aplicativo com o objetivo de fornecer informações para melhor compreensão dos fluxos de entrada e saída de recursos e trazer alugmas primeiras análises mais avançadas para fomentar o debate, a participação social e o controle social sobre as finanças públicas do governo central brasileiro.</p>
-									<ul class="actions">
-										<li><a href="https://fabdev.shinyapps.io/Analise_RTN/" class="button" target="_blank">Conheça</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-
-						<section>
-							<a href="municipios.html" class="image" target="_blank"><img src="images/EeM.PNG" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Dependência dos municípios brasileiros de transferências financeiras</h2>
-									<p>Uma análise exploratória do perfil dos municípios brasileiros e de sua dependência de recursos dos estados e da União.</p>
-									<ul class="actions">
-										<li><a href="municipios.html" class="button" target="_blank">Conheça</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-
-					<section>
-						<a href="fluxo-rec-desp.html" class="image" target="_blank"><img src="images/fluxo.PNG" alt="" data-position="top center" /></a>
-						<div class="content">
-							<div class="inner">
-								<h2>Para onde vão os recursos federais?</h2>
-								<p>Uma visualização da vinculação das receitas e despesas federais.</p>
-								<ul class="actions">
-									<li><a href="fluxo-rec-desp.html" class="button" target="_blank">Conheça</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-					<section>
-						<a href="https://youtu.be/Xjs5oKTp3cc" class="image" target="_blank"><img src="images/p1.png" alt="" data-position="top center" /></a>
-						<div class="content">
-							<div class="inner">
-								<h2>Descubra o Resultado do Tesouro Nacional - RTN</h2>
-								<p>Uma história sobre tchiluandas e rinocerontes. Ou seria sobre resultados primários, juros e dívida pública?</p>
-								<ul class="actions">
-									<li><a href="https://youtu.be/Xjs5oKTp3cc" class="button" target="_blank">Conheça</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-				</section>
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>O que fazemos</h2>
-							<p>O GT-CEAD da STN foi instituído pela Portaria 855, de 2017, tendo como missão:</p>
-							<div class="features">
-								<section>
-									<span class="icon major fa-code"></span>
-									<h3>Comunicação e análise</h3>
-									<p>Desenvolver atividades de comunicação estratégica institucional e de análise de dados avançada.</p>
-								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Transparência pública</h3>
-									<p>Com foco na promoção da transparência pública e no aprimoramento de práticas relacionadas às atribuições do Tesouro Nacional..</p>
-								</section>
-								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Produção de conhecimento</h3>
-									<p>Apoiando a produção e a divulgação de conhecimento, com vistas a colaborar para o debate de políticas públicas.</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Dados abertos</h3>
-									<p>Promovento maior disponbilidade de informações em temas para os quais a sociedade não encontra facilmente fontes para análises de forma objetiva.</p>
-								</section>
-							</div>
-							<p>Nosso <a href="downloads/PlanoDeTrabalho.pptx">Plano de Trabalho</a>.</p>
-							<p>Uma <a href="downloads/ApresentacaoCOGES.pptx">apresentação</a> sobre o nosso grupo.</p>
-							<!--<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
-							</ul>-->
-						</div>
-					</section>
-
-				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Entre em contato:</h2>
+							<h2>Enquanto isso, entre em contato!</h2>
 							<div class="split style1">
 								<section>
 									<ul class="contact">
@@ -151,9 +94,9 @@
 										</li>
 										<li>
 											<h3>Emails</h3>
-											<a href="fernando.barbalho@tesouro.gov.br">fernando.barbalho@tesouro.gov.br</a><br />
-											<a href="jordao.m.goncalves@tesouro.gov.br">jordao.m.goncalves@tesouro.gov.br</a><br />
-											<a href="tiago.pereira@tesouro.gov.br">tiago.pereira@tesouro.gov.br</a>
+											<a href="mailto:fernando.barbalho@tesouro.gov.br">fernando.barbalho@tesouro.gov.br</a><br />
+											<a href="mailto:jordao.m.goncalves@tesouro.gov.br">jordao.m.goncalves@tesouro.gov.br</a><br />
+											<a href="mailto:tiago.pereira@tesouro.gov.br">tiago.pereira@tesouro.gov.br</a>
 										</li>
 										<li>
 											<h3>Telefones</h3>
@@ -176,23 +119,6 @@
 
 			</div>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Secretaria do Tesouro Nacional. Todos os direitos reservados.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
